Made website even more mobile responsive by fixing those overflow display in the product list and wishlist items. Had to get rid of the length to those in the css, it was causing the text to run of the screen when it was on a mobile device. This is a huge step as now the website is completely mobile responsive and reacts to all screen sizes.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -44,6 +44,7 @@ a.login, a.signup, a.item {
   background-color: white;
   min-height: 500px;
   padding: 30px;
+  white-space: pre-wrap;
 }
 
 .hidden {
@@ -57,6 +58,13 @@ a.login, a.signup, a.item {
 pre {
   white-space: pre-wrap;
   overflow: hidden;
+}
+
+.productDescription, a.productDescription, .merchantDescription, p.description {
+  display: block;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 
