--- a/client/src/pages/User/Account/Account.css
+++ b/client/src/pages/User/Account/Account.css
@@ -4,7 +4,6 @@
 
 .merchantDescription {
   display: block;
-  width: 500px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
