--- a/client/src/pages/User/User.css
+++ b/client/src/pages/User/User.css
@@ -1,5 +1,4 @@
 .wishlistDescription {
-  width: 500px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
